--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
         <version>1.5.1.RELEASE</version>
     </parent>
 
-    <!-- 为pom定义一些常量，在pom中的其它地方可以直接引用 使用方式 如下 ：${file.encoding} -->
     <properties>
 
         <!-- <file.encoding>UTF-8</file.encoding>
@@ -46,13 +45,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.25</version>
         </dependency>
-        <!-- 每个dependency都对应这一个jar包 -->
-        <!--<dependency>-->
 
-        <!--&lt;!&ndash;一般情况下，maven是通过groupId、artifactId、-->
-        <!--version这三个元素值（俗称坐标）来检索该构件，-->
-        <!--然后引入你的工程。如果别人想引用你现在开发的这个项目-->
-        <!--（前提是已开发完毕并发布到了远程仓库），&ndash;&gt;-->
         <!--&lt;!&ndash;就需要在他的pom文件中新建一个dependency节点，将本项目的groupId、artifactId、version写入， maven就会把你上传的jar包下载到他的本地 &ndash;&gt;-->
         <!--<groupId>org.springframework.boot</groupId>-->
         <!--&lt;!&ndash;spring-boot-starter-web就帮你配置好了Spring MVC &ndash;&gt;-->
@@ -110,6 +103,9 @@
             <artifactId>jedis</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -190,6 +186,8 @@
             <artifactId>druid</artifactId>
             <version>1.0.12</version>
         </dependency>
+
+
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
@@ -198,27 +196,8 @@
 
     </dependencies>
 
-    <!--
-    在mavan的pom.xml文件中，存在两种build: 一种bulid被称为Project build ，即Project 的直接子元素，另一种build被称为profile bulid，即profile的直接子元素
-    profile bulid包含了基本的build元素。而project bulid 还包含了两个特殊的元素 即 directory  和 extensions
-build
-
-/build
-
-profiles
-
-    profile
-        build
-
-        /build
-
-    /profile
-/profiles
-
-
-    -->
     <build>
-        <plugins>   <!--构建过程中所用到的插件-->
+        <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -235,7 +214,6 @@ profiles
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 
